--- a/frontend/src/components/buttons-next-prev/Nextprev.css
+++ b/frontend/src/components/buttons-next-prev/Nextprev.css
@@ -1,5 +1,5 @@
 .prev_button{
-  padding: 4px;
+  padding: 4px 7px;
   border: 0;
   border-radius: 5px;
   background-color: #2b71b3;
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 .next_button{
-  padding: 4px;
+  padding: 4px 7px;
   border: 0;
   border-radius: 5px;
   background-color: #2b71b3;
