--- a/frontend/src/components/game-cards/GameCards.css
+++ b/frontend/src/components/game-cards/GameCards.css
@@ -1,15 +1,17 @@
 .index_game-cards-container {
+  padding-left: 140px;
+  padding-right: 140px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
 }
 .index_game-card {
-  width: 400px;
+  width: 310px;
   margin: 12px;
   border-radius: 6px;
   background-color: #0f303b;
-  transition: all 0.3s ease;
+  /* transition: all 0.3s ease; */
 }
 .index_game-card p {
   color: white;
@@ -54,32 +56,54 @@
   justify-content: space-between;
   width: 140px;
 }
-@media only screen and (max-width: 1750px) {
+@media only screen and (max-width: 1650px) {
+  .index_game-cards-container {
+    padding-left: 90px;
+    padding-right: 90px;
+  }
   .index_game-card {
-    width: 23%;
-    transition: all 0.3s ease;
+    width: 340px;
   }
   .index_game-card img {
-    height: 170px;
+    height: 200px;
   }
 }
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1375px) {
   .index_game-card {
-    width: 30%;
-
+    width: 380px;
+  }
+  .index_game-card img {
+    height: 220px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .index_game-cards-container {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+@media only screen and (max-width: 1025px) {
+  .index_game-cards-container {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .index_game-card {
+    width: 330px;
   }
   .index_game-card img {
     height: 180px;
   }
 }
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 850px) {
+  .index_game-cards-container {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
   .index_game-card {
-    width: 300px;
+    width: 340px;
+  }
+  .index_game-card img {
+    height: 200px;
+  }
+}
 
-  }
-}
-@media only screen and (max-width: 700px) {
-  .index_game-card {
-    width: 400px;
-  }
-}
