--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -11,7 +11,7 @@
 
 header {
     background-color: #0B252E;
-    box-shadow: 0px 0px 18px 0px rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 5px 0px rgb(124, 124, 124);
     width: 100%;
     height: 82px;
     padding: 10px;
@@ -19,6 +19,8 @@ header {
     justify-content: center;
     align-items: center;
     font-family: overpass;
+    position: sticky;
+    top: 0;
 }
 
 .header2 {
