--- a/frontend/src/components/plattform-filter/PlattformFilter.css
+++ b/frontend/src/components/plattform-filter/PlattformFilter.css
@@ -5,6 +5,7 @@
   border-radius: 5px;
   cursor: pointer;
   width: 150px;
+  height: 35px;
 }
 .PlattformFilter_dropdown_content{
   position: absolute;
