--- a/frontend/src/components/game-info/GameInfo.css
+++ b/frontend/src/components/game-info/GameInfo.css
@@ -82,7 +82,6 @@
   background-color: #2196f3;
   border-radius: 5px;
   border: none;
-  cursor: pointer;
 }
 .game_info_favorites_button:hover {
   background-color: #1077cc;
@@ -127,6 +126,22 @@
 .game_info_score_button p{ 
   margin-top: 20px;
   font-size: 16px;
+}
+.game_info_favorites_button_log{
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+.game_info_favorites_button_log p{
+  color: white;
+  padding: 10px;
+  margin-top: 20px;
+  font-size: 12px;
+  background-color: #2196f3;
+  border-radius: 5px;
+}
+.game_info_favorites_button_log:hover {
+  background-color: #1077cc;
 }
 
 @media only screen and (max-width: 1150px) {
