--- a/frontend/src/components/profile/Profile.css
+++ b/frontend/src/components/profile/Profile.css
@@ -105,6 +105,9 @@
   font-size: 16px;
   color: #333;
 }
+.select-container select option {
+  color: #333;
+}
 
 .input-container {
   margin-bottom: 10px;
